[gd_scene load_steps=2 format=3 uid="uid://quest_completion_dialog"]

[ext_resource type="Theme" uid="uid://b7w5k8j6x2q1a" path="res://resources/ui_theme.tres" id="1"]
[ext_resource type="Script" path="res://scripts/ui/QuestCompletionDialog.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://banlt66gdvndq" path="res://scenes/components/ui_button.tscn" id="3"]

[node name="QuestCompletionDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")
script = ExtResource("2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Quest Complete!"
horizontal_alignment = 1

[node name="QuestTitle" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Quest Name"
horizontal_alignment = 1
custom_minimum_size = Vector2(0, 30)

[node name="Rewards" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="RewardsTitle" type="Label" parent="Panel/VBoxContainer/Rewards"]
layout_mode = 2
text = "Rewards:"

[node name="ExpReward" type="Label" parent="Panel/VBoxContainer/Rewards"]
layout_mode = 2
text = "Experience: +100"
custom_minimum_size = Vector2(0, 25)

[node name="GoldReward" type="Label" parent="Panel/VBoxContainer/Rewards"]
layout_mode = 2
text = "Gold: +50"
custom_minimum_size = Vector2(0, 25)

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="OkButton" parent="Panel/VBoxContainer" instance=ExtResource("3")]
layout_mode = 2
text = "OK"
custom_minimum_size = Vector2(0, 40)

[connection signal="pressed" from="Panel/VBoxContainer/OkButton" to="." method="_on_ok_pressed"]
